fix button wrap

--- a/css/style1.css
+++ b/css/style1.css
@@ -978,6 +978,8 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    white-space: nowrap;
+    width: auto;
 }
 
 .cotizaciones-button a {
